# libfpga-myhdl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  libfpga.yaml  pyproject.toml
.github/workflows/: ci.yml
libfpga_myhdl/: __init__.py  cdc.py  fifo.py  math.py  serial.py  stream.py
libfpga_myhdl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: gen_verilog.py
tests/: cosim.py  test_cdc.py  test_convert.py  test_cosim.py  test_fifo.py  test_math.py  test_serial.py  test_stream.py
tests/cosim_vpi/: NOTICE
verilog/: lfpga_mac.v  tb_mac.v
