[project]
name = "libfpga-myhdl"
version = "0.1.0"
description = "Verified FPGA building blocks in MyHDL"
authors = [{name = "Antonio Roldao, Ph.D."}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["myhdl>=0.11"]

[project.urls]
Homepage = "https://libfpga.com"
Repository = "https://github.com/libfpga/libfpga-myhdl"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["libfpga_myhdl"]
